[gd_scene load_steps=3 format=3 uid="uid://beprbnjjk5egq"]

[ext_resource type="Script" path="res://components/world_areas/world_area.gd" id="1_kj6kv"]
[ext_resource type="FontFile" uid="uid://djlirv204gvvk" path="res://assets/fonts/CutiveMono-Regular.ttf" id="2_obuiq"]

[node name="WorldArea" type="PanelContainer"]
offset_left = 60.0
offset_top = 44.0
offset_right = 100.0
offset_bottom = 84.0
script = ExtResource("1_kj6kv")
area_name = ""
description = ""

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/Rows"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_obuiq")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/Rows"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_obuiq")
autowrap_mode = 3
